introductory page with proper citation
also, better formatting for commentary blocks

--- a/series-formelles.bib
+++ b/series-formelles.bib
@@ -1,3 +1,14 @@
+@article{joyal1981theorie,
+  title={Une th{\'e}orie combinatoire des s{\'e}ries formelles},
+  author={Joyal, Andr{\'e}},
+  journal={Advances in mathematics},
+  volume={42},
+  number={1},
+  pages={1--82},
+  year={1981},
+  publisher={Elsevier}
+}
+
 @Book{bll,
   address =	"Cambridge",
   author =	"Fran{\c c}ois Bergeron and Gilbert Labelle and Pierre Leroux",
