start work on bibliography

--- a/series-formelles.bib
+++ b/series-formelles.bib
@@ -9,6 +9,67 @@
   publisher={Elsevier}
 }
 
+@article{bender1971enumerative,
+  title={Enumerative uses of generating functions},
+  author={Edward A. Bender and Jay R. Goldman},
+  journal={Indiana Univ. Math. J.},
+  volume={20},
+  year={1971},
+  pages={753--765}
+}
+
+@book{bourbaki1968elements,
+  title={{\'E}lements de math{\'e}matiques. Th{\'e}orie des ensembles.},
+  author={Nicolas Bourbaki},
+  publisher={Hermann},
+  address={Paris},
+  year={1968}
+}
+
+@incollection{doubilet1975generating,
+  title={The idea of generating functions},
+  author={Peter Doubilet and Gian-Carlo Rota and Richard P. Stanley},
+  booktitle={{Finite Operator Calculus}},
+  editor={Gian-Carlo Rota},
+  year={1975},
+  pages={83--134},
+  publisher={Academic Press},
+  address={New York}
+}
+
+@article{foata1970theorie,
+  title={{Th\'eorie G\'eom\'etrique des Polyn\^omes Eul\'erins}},
+  author={Dominique Foata and Marcel-Paul Sch\"utzenberger},
+  journal={Lecture Notes in Mathematics},
+  number={138},
+  publisher={Springer-Verlag},
+  address={New York/Berlin},
+  year={1970}
+}
+
+@misc{garsia1976lecture,
+  title={{Lecture Notes in Combinatorics}},
+  author={Adriano M. Garsia and {Saj-nicole} A. Joni},
+  year={1976},
+  howpublished={UCSD Department of Mathematics, La Jolla}
+}
+
+@phdthesis{gessel1977generating,
+  title={{Generating Functions and Enumeration of Sequences}},
+  school={Massachusetts Institute of Technology},
+  author={Ira Martin Gessel},
+  year={1977}
+}
+
+@article{kendall1966branching,
+  title={Branching processes since 1873},
+  author={David G. Kendall},
+  journal={J. London Math.Soc.},
+  volume={41},
+  pages={385--406},
+  year={1966}
+}
+
 @Book{bll,
   address =	"Cambridge",
   author =	"Fran{\c c}ois Bergeron and Gilbert Labelle and Pierre Leroux",
