--- a/series-formelles.tex
+++ b/series-formelles.tex
@@ -164,17 +164,18 @@ The aim of this work is simultaneously to explain, clarify, and unify
 the subject.  The usefulness of formal series in combinatorial
 calculations is well established.  The combinatorial interpretation of
 the substitution operation has been the subject of relatively recent
-work (Bender and Goldman [1], Doubilet et al. [8], Foata and
-Schützenberger [12], Garsia and Joni [13], Gessel [14]). The first
-interpretation (probabilistic) of the substitution of power series
-dates back to Watson (Kendall [18]) (in theory of cascade processes).
+work (\citet{bender1971enumerative, doubilet1975generating,
+  foata1970theorie, garsia1976lecture, gessel1977generating}). The
+first interpretation (probabilistic) of the substitution of power
+series dates back to Watson \citep{kendall1966branching} (in the
+theory of branching processes).
 
 The main feature of the theory presented here is its degree of
 generality and simplicity. In this theory, the combinatorial objects
 corresponding to formal series are the species of structures. The
 emphasis is placed on the transport of structures rather than on their
 properties. This point of view is reminiscent of that of Ehresmann [9]
-and contrasts with that of Bourbaki [2]. The combinatorial operations
+and contrasts with that of \citet{bourbaki1968elements}. The combinatorial operations
 on formal series correspond to operations on species of
 structures. Algebraic identities between formal expressions often
 correspond to combinatorial identities.  Intuition and calculation can
@@ -219,11 +220,12 @@ University of Sydney.
 \section{Species of Structures}
 \label{sec:species-of-structures}
 
-There already exists a precise concept of species of structures (\todo{Bourbaki
-[2]}). Describing a particular species is often done by specifying the
-conditions which a structure must satisfy to belong to the species.
-This description may take the form of an axiomatic theory of the species
-being considered. A key part of the concept is the transport of structures.
+There already exists a precise concept of species of structures
+\citep[Chap.\ 4]{bourbaki1968elements}. Describing a particular species
+is often done by specifying the conditions which a structure must
+satisfy to belong to the species.  This description may take the form
+of an axiomatic theory of the species being considered. A key part of
+the concept is the transport of structures.
 
 We will abstract the concept of species so that the transport of
 structures is the main aspect. Moreover, as we only deal
