bit more bib/editing

--- a/series-formelles.bib
+++ b/series-formelles.bib
@@ -70,6 +70,32 @@
   year={1966}
 }
 
+@book{ehresmann1965categories,
+  title={Cat\'egories et structures},
+  author={Charles Ehresmann},
+  publisher={Dunod},
+  address={Paris},
+  year={1965}
+}
+
+@book{mac1971categories,
+  title={Categories for the working mathematician},
+  author={MacLane, Saunders},
+  year={1971},
+  publisher={Springer-Verlag}
+}
+
+@incollection{kelly1974clubs,
+  title={On clubs and doctrines},
+  author={Gregory M. Kelly},
+  booktitle={Category Seminar, Lecture Notes in Mathematics},
+  editor={Gregory M. Kelly},
+  publisher={Springer-Verlag},
+  number={420},
+  address={New York/Berlin},
+  year={1974}
+}
+
 @Book{bll,
   address =	"Cambridge",
   author =	"Fran{\c c}ois Bergeron and Gilbert Labelle and Pierre Leroux",
