--- a/series-formelles.tex
+++ b/series-formelles.tex
@@ -174,36 +174,36 @@ The main feature of the theory presented here is its degree of
 generality and simplicity. In this theory, the combinatorial objects
 corresponding to formal series are the species of structures. The
 emphasis is placed on the transport of structures rather than on their
-properties. This point of view is reminiscent of that of Ehresmann [9]
-and contrasts with that of \citet{bourbaki1968elements}. The combinatorial operations
-on formal series correspond to operations on species of
-structures. Algebraic identities between formal expressions often
-correspond to combinatorial identities.  Intuition and calculation can
-then play on two fronts in a dialogue that resembles that between
-algebra and geometry. The result is a kind of combinatorial algebra
-analogous to the geometric algebra of Grassman (and Leibniz). The
-simplicity of the theory is largely due to the use it makes of the
-concepts of the theory of categories [23] (previous theories mainly
-use the theory of ordered sets and partitions). Furthermore, it
-highlights the fundamental fact that a very large number of
-constructed bijections are \emph{natural}, that is to say, they do not
-depend on a system of coordinates introduced by means of an arbitrary
-enumeration.
+properties. This point of view is reminiscent of that of
+\citet{ehresmann1965categories} and contrasts with that of
+\citet{bourbaki1968elements}. The combinatorial operations on formal
+series correspond to operations on species of structures. Algebraic
+identities between formal expressions often correspond to
+combinatorial identities.  Intuition and calculation can then play on
+two fronts in a dialogue that resembles that between algebra and
+geometry. The result is a kind of combinatorial algebra analogous to
+the geometric algebra of Grassman (and Leibniz). The simplicity of the
+theory is largely due to the use it makes of the concepts of category
+theory \citep{mac1971categories} (previous theories mainly use the
+theory of ordered sets and partitions). Furthermore, it highlights the
+fundamental fact that a very large number of constructed bijections
+are \emph{natural}, that is to say, they do not depend on a system of
+coordinates introduced by means of an arbitrary enumeration.
 
-The work contains a few combinatorial innovations, like the concept of the
-\term{vertebrate} and a new proof of Cayley's result on the
-number of trees. There is also a new combinatorial proof
-of Lagrange's inversion theorem. Polya theory is entirely
-redone and results in a method for calculating by
-\emph{recurrence} the coefficients of cycle index polynomials.
+The work contains a few combinatorial innovations, like the concept of
+the \term{vertebrate} and a new proof of Cayley's result on the number
+of trees. There is also a new combinatorial proof of Lagrange's
+inversion theorem. Polya theory is entirely redone and results in a
+method for calculating by \emph{recurrence} the coefficients of cycle
+index polynomials.
 
 The theory presented here is partial. Several fundamental aspects have
 not been addressed. For example, there is a very general categorical
-theory of the substitution operation (Kelly [l7]). Further
-developments probably require such a level of generality. We limited
+theory of the substitution operation \citep{kelly1974clubs}. Further
+developments probably require such a level of generality. We limit
 ourselves to those aspects most suitable (in the opinion of the
-author) to capture the attention of a reader unfamiliar with the
-concepts of the theory of categories.
+author) for capturing the attention of a reader unfamiliar with the
+concepts of category theory.
 
 I am especially grateful to G. Labelle for expressing interest in the
 author's questions, and to whom I owe the proof of Lagrange's
