work on format and fixing citations

--- a/series-formelles.bib
+++ b/series-formelles.bib
@@ -96,6 +96,23 @@
   year={1974}
 }
 
+@book{comtet1974combinatorics,
+  title={{Advanced Combinatorics}},
+  author={Louis Comtet},
+  publisher={Reidel},
+  address={Dordrecht-Holland/Boston},
+  year={1974}
+}
+
+@book{burnside1955groups,
+  title={{Theory of Groups of Finite Order}},
+  author={William Burnside},
+  edition={2nd},
+  publisher={Dover},
+  address={New York},
+  year={1955}
+}
+
 @Book{bll,
   address =	"Cambridge",
   author =	"Fran{\c c}ois Bergeron and Gilbert Labelle and Pierre Leroux",
