lots more fixing up references etc

--- a/series-formelles.bib
+++ b/series-formelles.bib
@@ -113,6 +113,30 @@
   year={1955}
 }
 
+@book{cartan1954seminaire,
+  title={S\'eminaire Henri Cartan (7th year, 1954--1955)},
+  author={Henri Cartan},
+  publisher={Benjamin},
+  year={1967}
+}
+
+@article{polya1937kombinatorische,
+  title={{Kombinatorische Anzahlbestimmungen fur Gruppen, Graphen und chemische Verbindungen}},
+  author={George P\'olya},
+  journal={Acta Math.},
+  volume={68},
+  pages={145--254},
+  year={1937}
+}
+
+@book{harary1973graphical,
+  title={{Graphical Enumeration}},
+  author={Frank Harary and Edgar M. Palmer},
+  publisher={Academic Press},
+  address={New York/London},
+  year={1973}
+}
+
 @Book{bll,
   address =	"Cambridge",
   author =	"Fran{\c c}ois Bergeron and Gilbert Labelle and Pierre Leroux",
