--- a/series-formelles.tex
+++ b/series-formelles.tex
@@ -15,6 +15,7 @@
 \usepackage{xspace}
 \usepackage{url}
 \usepackage{xcolor}
+\usepackage{soul}
 
 \usepackage[backend=pgf,extension=pgf,input,outputdir=diagrams]{diagrams-latex}
 
@@ -47,6 +48,13 @@
 
 %% XXX use a different font for commentary?  Or a different font for
 %% original paper?
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%% Translation
+
+\colorlet{lightpurple}{purple!15}
+\sethlcolor{lightpurple}
+\newcommand{\trans}[2]{\hl{#1 [\textit{#2}]}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Todo notes
@@ -102,6 +110,8 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Other formatting
+
+\setcounter{figure}{-1}
 
 \newcommand{\etc}{\textit{etc.}\xspace}
 
@@ -494,10 +504,8 @@ we say that $M$ and $N$ are \emph{equipotent} species, and we write $M
 
 \subsubsection{} A morphism of species $M \to N$ determines a functor
 $\el (M) \to \el (N)$ between the corresponding groupoids. Note that
-this functor commutes with the forgetful functors \[ \xymatrix{\el(M)
-  \ar[rr] \ar[dr]_U & & \el(N) \ar[dl]^U \\ & B} \] \todo{Make this
-  not as wide}
-
+this functor commutes with the forgetful functors \[ \xymatrix@C=0.7em{\el(M)
+  \ar[rr] \ar[dr]_U & & \el(N) \ar[dl]^U \\ & B.} \]
 It is not true that a functor $\el (M) \to \el (N)$ is always induced
 by a morphism of species $M \to N$. For example, if $M$ is the species
 of preorders and $N$ the species of the orders, the usual construction
@@ -606,7 +614,7 @@ In addition, the evaluation $M \mapsto M [0]$ is a functor preserving sum and
 product
 \[ \Poly \E X \to \E \]
 whose kernel $J$ is an ideal on which we will describe the operations
-of \term{divided powers} (Cartan [4] \todo{citation})
+of \term{divided powers} \citep{cartan1954seminaire}
 \[ \gamma_n : J \to \Poly \E X \quad \text{($n \geq 0$)} \]
 so that we have
 \[ \Card \gamma_n(M) = \frac{M(x)^n}{n!} \quad \text{($n \geq 0$)}. \]
@@ -656,39 +664,53 @@ partitions $E = E_1 + E_2$ with $\Card E_1 = k$.  As a result,
 
 The \term{uniform} species is a species with only one structure on
 each set; one can give it various representations: the structures of
-complete graphs, chaotic topologies \todo{translation?}, and identical
-applications \todo{translation?} determine the uniform species.
+complete graphs, chaotic topologies, and \trans{identity
+  functions}{applications identiques}
+determine the uniform species.
 
 \begin{ex}
   Let $S$ be the species of \term{permutations}, and $S_0$ that of
   permutations without \emph{fixed points}, and $U$ the uniform
-  species. We have $S = S_0 \cdot U$ \todo{figure reference}; taking
+  species. We have $S = S_0 \cdot U$ (\pref{fig:permutation}); taking
   cardinalities, we get:
 \[ \frac{1}{1-x} = S_0 (x) e^x \]
 and therefore
 \[ S_0 (x) = \frac{e^{-x}}{1 - x}. \]
 \end{ex}
 
+\begin{figure}
+  \centering
+  \missingfigure{Permutation partitioned into fixed points and no
+    fixed points.}
+  \caption{XXX}
+  \label{fig:permutation}
+\end{figure}
+
 \begin{ex}
-  Let $D$ be the species of endofunctions, $D_0$ the species
+  Let $D$ be the species of endofunctions, $D_0$ the species of
   endofunctions equipped with a fixed point, and $A$ and the species
-  of rooted trees?. Then
+  of rooted trees. Then
   \[ D_0 = A \cdot D. \] Indeed, one can partition the domain $E$ of
   an endofunction $\phi$ equipped with a fixed point $x_0$ into two
   parts $E = E_1 + E_2$. The first, $E_1$, consists of all the points
   ultimately transformed into $x_0$ by $\phi$. On $E_1$, $\phi$
-  induces a contraction \todo{reference (Chap. 1 Ex. 2)}, which is
-  equivalent to a rooted tree. On the second part $E_2$, $\phi$
-  induces an arbitrary endofunction \todo{reference (Fig. 2)}.
+  induces a contraction (\pref{ex:endofunctions}), which is equivalent
+  to a rooted tree. On the second part $E_2$, $\phi$ induces an
+  arbitrary endofunction (\pref{fig:endofunction}).
 \end{ex}
+
+\begin{figure}
+  \centering
+  \missingfigure{Endofunction}
+  \caption{XXX}
+  \label{fig:endofunction}
+\end{figure}
 
 The \emph{product} $M = \prod_{i=1}^n M_i$ of a finite sequence of
 species can be explicitly defined as follows: a structure of the
 species $M$ on $E$ is a \emph{partition} $E = E_1 + \dots + E_n$ where
 each part $E_i$ (possibly empty) is \emph{equipped} with a structure
 of the species $M_i$.
-
-\todo{FIGURE 2}
 
 One can also describe the \term{power} $N^S$ of a species $N$ by a
 finite set $S$: a structure of the species $N^S$ on $E$ is a function
@@ -703,16 +725,22 @@ function.
   $p_1$ the \term{head vertex}. The shortest path from the tail vertex
   to the head vertex is the \term{spine}. The vertices along the spine
   are \term{vertebrae}. For each vertex $p$, let $v(p)$ be the
-  vertebra closest to $p$. The function $v$ is idempotent, and there a
-  tree \todo{translation?}-structure on each fiber of $v$.  The roots
-  of these trees are the vertebrae. Thus, a vertebrate on $E$
-  determines a variable length partition $E = E_1 + \dots + E_n$, in
-  which each part $E_i$ is equipped with a tree structure, and vice
+  vertebra closest to $p$. The function $v$ is idempotent, and there
+  is a rooted tree structure on each fiber of $v$.  The roots of these
+  trees are the vertebrae. Thus, a vertebrate on $E$ determines a
+  variable length partition $E = E_1 + \dots + E_n$, in which each
+  part $E_i$ is equipped with a rooted tree structure, and vice
   versa. So we have the identity:
   \[ V = A + A^2 + A^3 + \dots, \] where $V$ is the species of
-  vertebrates and $A$ that of trees \todo{translation} \todo{reference
-    (Fig 3)}.
+  vertebrates and $A$ that of rooted trees (\pref{fig:vertebrate}).
 \end{ex}
+
+\begin{figure}
+  \centering
+  \missingfigure{vertebrate}
+  \caption{XXX}
+  \label{fig:vertebrate}
+\end{figure}
 
 \begin{ex}
   Let $L$ be the species of linear orders and $S$ a finite set.  A
@@ -722,8 +750,6 @@ function.
   of $x^n/n!$ in the series $(1-x)^{-s}$. This shows that
   \[ l(n, s) = s (s + 1) \dots (s + n-1). \]
 \end{ex}
-
-\todo{FIGURE 3}
 
 Hereafter, we will often consider that a finite set $A$
 determines a species by setting
@@ -821,12 +847,14 @@ resulting in
   To think combinatorially it is necessary to give visual
   representations. To grasp the nature of a species is to be capable
   of representing the general shape of its structures. The
-  \emph{shape} of a structure is invariant under isomorphism. What is
-  needed to represent first is the general type of structures of a
-  given species. \todo{translation?}  This type is independent of a
-  labelling or an enumeration of the vertices of the underlying
-  set. For example, suppose that we want to represent the general type
-  of structures of the species $R(N)$ knowing that we already have a
+  \emph{shape} of a structure is invariant under
+  isomorphism. \trans{What is needed to represent first is the general
+    type of structures of a given species}{Ce qu'il faut arriver \`a
+    se repr\'esenter d'abord c'est le type g\'en\'eral des structures
+    d'une esp\`ece donn\`ee}.  This type is independent of a labelling
+  or an enumeration of the vertices of the underlying set. For
+  example, suppose that we want to represent the general type of
+  structures of the species $R(N)$ knowing that we already have a
   representation for $R$ and $N$. What we can do is to literally
   substitute arbitrarily selected $N$-structures in place of each
   vertex of an $R$-structure, For this, one can imagine that the
@@ -835,7 +863,14 @@ resulting in
   the sum of the underlying sets of the structures contained in the
   cells. Thus, if we substitute the species of circular permutations
   into the species of trees, we obtain a species whose general type
-  can be represented as in Figure 4.
+  can be represented as in \pref{fig:tree-of-cycles}.
+
+  \begin{figure}
+    \centering
+    \missingfigure{tree of cycles}
+    \caption{XXX}
+    \label{fig:tree-of-cycles}
+  \end{figure}
 
 This representation is not the only one, and it is convenient to adapt to
 the particularities of a species. For example, suppose that the species $N$
@@ -858,7 +893,7 @@ $R (N)$-structure on $E$ is a triplet $(v, \alpha, \beta)$, where
 \end{enumerate}
 \end{rem}
 
-\todo{FIGURE 4}
+
 
 \begin{ex}
 Let $D$ be the species of endofunctions, $S$ that of
@@ -872,10 +907,16 @@ idempotent and its image is the set of periodic points. For each $x
 \in \Im (v)$ the fiber $v^{-1}\{x\}$ is equipped with a rooted tree
 structure whose root is $x$. \emph{Conversely}, if one has an assembly
 of rooted trees and a permutation of the set of roots, it is clear
-that one can construct a corresponding endofunction $\phi$ (FIG 5)
+that one can construct a corresponding endofunction $\phi$
+(\pref{fig:perm-of-rooted-trees}).
 \end{ex}
 
-\todo{FIGURE 5}
+\begin{figure}
+  \centering
+  \missingfigure{Permutation of rooted trees}
+  \caption{XXX}
+  \label{fig:perm-of-rooted-trees}
+\end{figure}
 
 Examples 9 and 12 give a simple proof of Cayley's theorem: the number
 $a_n$ of trees on a set of cardinality $n \geq 1$ is
@@ -889,31 +930,29 @@ obtains $n^2 a_n = n^n$ $(n \geq 1)$.
 \pref{thm:card-subst} suggests adopting the notation $M (X)$ to
 designate a species $M$. The variable $X$ is interpreted as the
 \emph{singleton} species: there is only a single structure of the
-species $X$ (up to isomorphism) and it is supported by the
-singletons. \todo{translation?} The result $M (X)$ of the substitution
-of $X$ in $M$ is isomorphic to $M$. For some species we adopt a
-frankly \todo{translation?}  algebraic notation if it does not create
-ambiguity. Thus, $\exp (X)$ or $e^X$ designate the uniform species, $X
-e^X$ the species of pointed sets, $e^X - 1$ the uniform nonempty
-species, $\cosh (X)$ and $\sinh (X)$ the uniform even and odd species,
-$1/(1 - X)$ the species of linear orders, \etc However, we retain the
-notation $S (X)$ to designate the species of permutations in order to
-avoid confusion with $1/(1-X)$. Similarly, we will use the notation $C
-(X)$ rather than $\log 1/(1-X)$ to designate the species of circular
-permutations, \etc
+species $X$ (up to isomorphism) and it is \trans{supported by the
+  singletons}{port\'ee par les singletons}.  The result $M (X)$ of the
+substitution of $X$ in $M$ is isomorphic to $M$. For some species we
+adopt a \trans{frankly}{franchement} algebraic notation if it does not
+create ambiguity. Thus, $\exp (X)$ or $e^X$ designate the uniform
+species, $X e^X$ the species of pointed sets, $e^X - 1$ the uniform
+nonempty species, $\cosh (X)$ and $\sinh (X)$ the uniform even and odd
+species, $1/(1 - X)$ the species of linear orders, \etc However, we
+retain the notation $S (X)$ to designate the species of permutations
+in order to avoid confusion with $1/(1-X)$. Similarly, we will use the
+notation $C (X)$ rather than $\log 1/(1-X)$ to designate the species
+of circular permutations, \etc
 
 \begin{ex}
   A preorder relation $\leq$ on $E$ determines an equivalence
   relation: $x \equiv y$ if and only if one has $x \leq y$ and $y \leq
   x$.  The preorder relation induced on the quotient $E / \equiv$ is
-  an order relation \todo{translation?}, and conversely.  This shows that the
-  species of preorders is obtained by substituting the species $e^X -
-  1$ in the species of order relations. In particular, the species of
-  total preorders is
+  an \trans{order relation}{relation d'ordre}, and conversely.  This
+  shows that the species of preorders is obtained by substituting the
+  species $e^X - 1$ in the species of order relations. In particular,
+  the species of total preorders is
   \[ \frac{1}{1 - (e^X - 1)} = \frac{1}{2 - e^X}. \]
 \end{ex}
-
-\todo{FIGURE 6}
 
 \begin{ex}
   In a graph, two vertices are \term{doubly connected} if we can
@@ -928,22 +967,31 @@ permutations, \etc
   component $H$. We can easily verify that $v$ is well defined. It is
   an idempotent function whose fibers are equipped with a structure of
   the species $X \cdot e^{\Gc(X)}$; the image of $v$ coincides with
-  the doubly connected pointed graph $H$ \todo{reference (FIG 6)}.
+  the doubly connected pointed graph $H$ (\pref{fig:doubly-connected}).
 \end{ex}
 
-\todo{FIGURE 7}
+\begin{figure}
+  \centering
+  \missingfigure{doubly connected}
+  \caption{XXX}
+  \label{fig:doubly-connected}
+\end{figure}
 
-\todo{FIGURE 8}
-
-\begin{ex}[Polya]
-  \todo{citation}
+\begin{ex}[\citet{polya1937kombinatorische}]
   Consider the species $A$ of rooted trees.  One has the identity
-  \todo{reference (FIG. 7)}
+  (\pref{fig:root-plus-forest})
 \[ A = X \cdot \exp (A). \]
-More generally, the species $A_R$ of R-enriched trees satisfies
-the equation \todo{reference (see 1.3, Fig. 0 XXX)}
+More generally, the species $A_R$ of $R$-enriched trees satisfies
+the equation (see \pref{fig:enriched-tree})
 \[ A_R = X \cdot R(A_R). \]
 \end{ex}
+
+\begin{figure}
+  \centering
+  \missingfigure{root plus forest of rooted trees}
+  \caption{XXX}
+  \label{fig:root-plus-forest}
+\end{figure}
 
 \subsection{Differential calculus}
 
@@ -959,25 +1007,42 @@ follows:
 
 \begin{ex}
   The derivative of the species $C (X)$ of circular permutations is
-  the species of linear orders \todo{reference (Fig. 8 XXX)}:
-  \[ C'(X) = \frac{1}{1 - X} \]
+  the species of linear orders (\pref{fig:diff-cycle}):
+  \[ C'(X) = \frac{1}{1 - X}. \]
 \end{ex}
 
-\todo{FIGURE 9}
-
-\todo{FIGURE 10}
+\begin{figure}
+  \centering
+  \missingfigure{derivative of a cycle}
+  \caption{XXX}
+  \label{fig:diff-cycle}
+\end{figure}
 
 \begin{ex}
   The derivative of the species of trees is that of forests of pointed
-  trees \todo{reference (Fig 9)}.
+  trees (\pref{fig:diff-tree}).
 \end{ex}
+
+\begin{figure}
+  \centering
+  \missingfigure{derivative of a tree}
+  \caption{XXX}
+  \label{fig:diff-tree}
+\end{figure}
 
 \begin{ex}
   Recall that a graph is \term{even} if the number of edges adjacent
   to each vertex is even. The derivative of the species of even graphs
-  is the species of graphs \todo{reference (Fig. 10)}. \todo{citation
-    (Harary and Palmer [15])}
+  is the species of graphs
+  (\pref{fig:diff-even-graph}). \citep{harary1973graphical}.
 \end{ex}
+
+\begin{figure}
+  \centering
+  \missingfigure{derivative of an even graph}
+  \caption{XXX}
+  \label{fig:diff-even-graph}
+\end{figure}
 
 \begin{ex}
   The derivative of the species of linear orders $1 / (1-X)$ is equal
