--- a/series-formelles.tex
+++ b/series-formelles.tex
@@ -69,6 +69,7 @@
 \newcommand{\Z}{\mathbb{Z}}
 \newcommand{\N}{\mathbb{N}}
 \DeclareMathOperator{\el}{el}
+\DeclareMathOperator{\Res}{Res}
 
 \newcommand{\bij}{\stackrel{\sim}{\rightarrow}}
 \newcommand{\inj}{\hookrightarrow}
@@ -1052,6 +1053,226 @@ follows:
 Recall that a \term{pointed} structure of the species $M$ on $E$ is an
 element of $E \times M [E]$. We denote by $\pointed M$ the species of
 pointed $M$-structures.
+
+PROPOSITION 5. We have the relations
+
+\begin{align*}
+\pointed M &= X \cdot M', \\
+(M + N)' &= M' + N', \\
+(M \cdot N)' &= M' \cdot N + M \cdot N', \\
+M(N)' &= M'(N) \cdot N'.
+\end{align*}
+These identities are not only relationships between numeric quantities
+
+but real \emph{combinatorial} identities. We leave to
+the reader the pleasure of demonstrating this.
+
+
+
+EXAMPLE 20 XXX. To illustrate the combinatorial differential calculus,
+consider the equation satisfied by the species $A$ of rooted trees:
+
+\[ A = X \cdot e^A. \]
+
+The operation of "pointing" is a derivation (??? XXX)
+\[ \pointed A = \pointed X \cdot e^A + X \cdot e^A \pointed A. \]
+Pointed rooted trees are vertebrates:
+\begin{align*}
+V = \pointed A &= X \cdot e^A + X \cdot e^A V \\
+&= A + A \cdot V \\
+&= A + A^2 + A^3 + \dots .
+\end{align*}
+
+It has been shown that vertebrates are (non-empty) linear assemblies
+of rooted trees. (See 2.1, Ex. 9 XXX)
+
+2.4. The Lagrange inversion formula
+
+The methods of analysis sometimes leave traces in
+the restricted world of formal series. An example is the theory of the \term{residue}
+(at the point $0$) of a formal meromorphic series. The invariance property
+of the residue with respect to an invertible change of parameter $x = w (t)$ is
+a fundamental \emph{algebraic identity}:
+
+\[ \Res f (x) dx = \Res f(u (t)) u' (t) dt. \]
+
+This identity is equivalent to the \term{Lagrange inversion formula}. This
+formula gives the coefficient $c_n$ of $x_n$ in the series $g (v (x))$ when $v (x)$
+satisfies the equation $v (x) = xR(v (x))$:
+
+\[ c_n = \frac{1}{n} \times \text{coefficient of $t^{n-1}$ in $g'(t)R(t)^n$}. \]
+
+To demonstrate this, it is sufficient to note that this coefficient is equal to the residue
+at the origin of $g (v (x))/x^{n+1}$. Note further that $u (t) = t / R (t)$ is the inverse series
+of $v$. Performing the change of the parameter $x = u (t)$ and using the
+invariance property yields
+
+\begin{align*}
+c_n &= \Res g(t) \frac{u'(t)}{u(t)^{n+1}} dt \\
+&= \Res \left[ \frac{g'(t)}{nu(t)^n} - \left( \frac{g(t)}{nu(t)^n}\right)' \right] dt \\
+&= \Res \frac{g'(t)}{nu(t)^n} dt \\
+&= \frac{1}{n} \Res \frac{g'(t) R(t)^n}{t^n} dt \\
+&= \frac{1}{n} \times \text{coefficient of $t^{n-1}$ in $g'(t) R(t)^n$}.
+\end{align*}
+
+Since the calculations are reversible, the equivalence between the inversion formula
+and the invariance property is clear.
+
+2.4.2. Since Polya [26 XXX], the inversion formula is often used
+in combinatorics to calculate the coefficients of certain generating series
+(the canonical example is the species $A$ of rooted trees that satisfy
+the equation $A = X \cdot \exp (A)$, see Moon [24 XXX]).
+
+There is already a purely combinatorial proof of the inversion formula
+(Raney [27 XXX]). This proof is based on different concepts
+than those used in the following proof. In Chapter 4 XXX,
+we will give another proof of the inversion formula.
+
+THEOREM 2 XXX (Lagrange Inversion). Let $R$ and $F$ be species and let
+$A_R$ be the species of R-enriched rooted trees. For $n \geq 1$, we have:
+
+\[ F(A_R)[n] \equiv F' R^n[n-1] \]
+(the $\equiv$ denotes equipotence).
+PROOF XXX. Recall (Ex. 15 XXX) that $A_R$ satisfies the equation
+\[ A_R = X \cdot R (A_R). \]
+This leads to the derivation
+\begin{align*}
+A_R' &= R(A_R) + X \cdot R'(A_R) A_R' \\
+&= R (A_R) + C_R A_R'
+\end{align*}
+and by iteration ($C_R = X \cdot R'(A_R)$)
+
+\begin{align*}
+&= R (A_R) (1 + C_R + C_R^2 + \dots) \\
+&= R(A_R) \frac{1}{1 - C_R}.
+\end{align*}
+
+At this point, we want to replace $1 / (1 - C_R)$ by $S(C_R)$, where $S$ is
+
+the species of permutations. We need to interpret
+the result of such replacement combinatorially.
+
+
+
+
+
+FIGURE 11 XXX
+
+LEMMA 1 XXX (G. Labelle [20 XXX]). The species $C_R = X \cdot R'(A_R)$ coincides with
+that of $R$-enriched contractions. (See 1.3 XXX and Ex. 5 XXX)
+
+Indeed, consider an $R$-enriched contraction $\phi : E \to E$. Let $x_0$ be the point
+of convergence of $\phi$. We can partition $E$ into two parts:
+$\{x_0\} + E - \{x_0\}$. On the second part, there is the structure of an $R'$-assembly of
+$A_R$-structures as seen in FIGURE 11 XXX (the loop
+explains the presence of the derivative in the formula $C_R = X \cdot R'(A_R)$). \emph{And conversely.}
+
+
+LEMMA 2 (G. Labelle). The result of the substitution of $C_R$
+in the species $S$ of permutations coincides with the species $D_R$ of $R$-enriched endofunctions.
+
+
+PROOF XXX. The lemma states that $S(C_R) = D_R$. We use the decomposition of an
+endofunction into permutations and rooted trees as
+
+
+
+FIGURE 12 XXX
+
+
+
+described in EXAMPLE 12 XXX. Replace the rooted trees in this decomposition
+by contractions. If we compare, at each point, the fiber
+of the endofunction with the fiber of the contraction ``containing'' that point, we
+realize that they are in bijection (they coincide if the point is not
+periodic). One can then carry the $R$-structures along these
+bijections. This shows that the $R$-enriched endofunctions are in canonical bijection
+with the permutation assemblies (XXX ???) of $R$-enriched contractions.
+
+The proof of the theorem continues by taking the \emph{derivative} of $F(A_R)$:
+
+\begin{align*}
+F(A_R)' &= F'(A_R) A_R' \\
+&= F'(A_R) R(A_R) \frac{1}{1 - C_R} \\
+&\equiv F'(A_R) R(A_R) D_R.
+\end{align*}
+
+
+
+LEMMA 3 XXX (G. Labelle) (Repartitioning XXX ??? lemma). Let $G$ be any species.
+A structure of the species $G(A_R) D_R$ on a set $E$ can
+be interpreted as giving a partition $E = E_1 + E_2$ whose first
+part $E_1$ is equipped with a $G$-structure $\gamma$ and the second part $E_2$ is equipped with
+an $R$-enriched function $\lambda : E_2 \to E$.
+
+PROOF XXX. Let $(F_1, F_2, g, f)$ be a structure of the species $G(A_R) \cdot D_R$ on $E$.
+We have $E = F_1 + F_2$. We can describe $g$ as a forest of $R$-enriched rooted trees
+where the set of roots is equipped with a $G$-structure $\gamma$. Let $E_1$ be the set 
+of these roots, and let $E_2$ be its complement. This forest of
+rooted trees, together with the endofunction $f$, defines an R-enriched function
+$\lambda : E_2 \to E$.(See FIG 13 XXX) Conversely, starting from $(E_1, E_2, \gamma, \lambda)$, we first recover
+$F_1$ as the set of all points in $E$ that are ultimately
+transformed into $E_1$ by $\lambda$. One may complete the proof by meditating on
+FIGURE 13 XXX.
+
+
+
+
+
+
+
+
+
+
+
+FIGURE 13 XXX
+
+
+
+We now use this lemma to compute the cardinality of
+$(G(A_R) D_R) [n]$. (XXX note typo $R_R$) Indeed, the $R$-enriched functions $\lambda : E_2 \to E$ \emph{coincide} with
+the $R$-enriched functions $\lambda : E_2 \to [n]$ in the case where $E = [n]$ (see
+the note preceding EXAMPLE 9 XXX). We have therefore
+
+\[ (G(A_R) D_R) [n] = (G \cdot R^n)[n]. \]
+
+Finally, note that we want to calculate $F(A_R) [n]$, and
+if $n \geq 1$, we have
+
+XXX should there be a prime on the first line?
+\begin{align*}
+F(A_R)[n] &= F(A_R)[n-1] \\
+&\equiv F'(A_R) R(A_R) D_R[n-1] \\
+&\equiv (F' R) R^{n-1} [n-1] \\
+&= F' R^n [n-1].
+\end{align*}
+
+
+
+
+XXX SECTION 3. ENUMERATION OF TYPES OF STRUCTURES
+
+3.0. In this chapter, we will try to solve the problem of
+enumeration of \emph{types} of structures of a given species $M$. It will suffice
+to calculate, for each $n \in \N$, the cardinality of the set $\pi_0(M[n])$ of the
+orbits of $M [n]$ under the action of $[n]!$. In other words, we want to identify
+the generating series
+
+\[ \unl M (x) = \sum_{n \geq 0} \Card \pi_0(M[n]) x^n. \]
+
+
+
+It is often impossible to describe $\unl M (x)$ explicitly. However, if
+we have a functional equation, we can calculate the coefficients
+of $\unl M (x)$ by induction. The current (XXX ???) technique for calculating the number of
+isomorphism classes is due to P\'olya. It makes use of a certain
+polynomial indicating \emph{cycles} (Polya [26 XXX]). Instead, we calculate a
+\term{index series} $Z_M$.  We obtain a substitution theorem for the
+index series. This result often allows us to calculate the coefficients
+of $Z_M$ by \emph{induction}. We will follow a path less algebraic and
+more combinatorial than P\'olya. In this way, we hope to show
+the direct link between the problem of enumeration of structures and that of
+enumeration of \emph{types} of structures.
 
 \bibliographystyle{plainnat}
 \bibliography{series-formelles}
