--- a/series-formelles.bib
+++ b/series-formelles.bib
@@ -137,6 +137,34 @@
   year={1973}
 }
 
+@inproceedings{moon1970counting,
+  title={Counting labelled trees, Canadian Mathematical Monographs, No. 1},
+  booktitle={Canadian Mathematical Congress},
+  author={John W. Moon},
+  year={1970},
+  address={Montreal}
+}
+
+@article{raney1960functional,
+  title={Functional composition patterns and power series reversion},
+  author={George N. Raney},
+  journal={Trans. Amer. Math. Soc.},
+  volume={94},
+  year={1960},
+  pages={441--451}
+}
+
+@article{labelle1981nouvelle,
+  title={Une nouvelle d{\'e}monstration combinatoire des formules d'inversion de Lagrange},
+  author={Labelle, Gilbert},
+  journal={Advances in Mathematics},
+  volume={42},
+  number={3},
+  pages={217--247},
+  year={1981},
+  publisher={Elsevier}
+}
+
 @Book{bll,
   address =	"Cambridge",
   author =	"Fran{\c c}ois Bergeron and Gilbert Labelle and Pierre Leroux",
