--- a/series-formelles.tex
+++ b/series-formelles.tex
@@ -263,12 +263,9 @@ satisfy to belong to the species.  This description may take the form
 of an axiomatic theory of the species being considered. A key part of
 the concept is the transport of structures.
 
-We will abstract the concept of species so that the transport of
-structures is the main aspect. Moreover, as we only deal
-with the problems of counting and finite enumeration, we will confine ourselves
-to finitary species, unless otherwise noted.
-
 \begin{commentary}
+  \todo{definition of species}
+
   See \citet[pp. 6--7]{BLL} for some examples of ``axiomatic theories
   of species''. The main point here is about \emph{transport} of
   species, that is, the ability to ``swap out'' the labels in a
@@ -277,6 +274,11 @@ to finitary species, unless otherwise noted.
   be verified after each definition; Joyal's insight is to make
   transport itself the central defining feature of species.
 \end{commentary}
+
+We will abstract the concept of species so that the transport of
+structures is the main aspect. Moreover, as we only deal
+with the problems of counting and finite enumeration, we will confine ourselves
+to finitary species, unless otherwise noted.
 
 \subsection{Species and cardinality}
 \label{sec:species-and-cardinality}
